HADOOP-15757. ABFS: remove dependency on common-codec Base64. Contributed by Da Zhou.